--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
@@ -2,10 +2,10 @@
 
 <div>
 
-    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">SPOTBIE AD MANAGER</h4>
+    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">IN-HOUSE PROMOTIONS</h4>
 
     <p class="spotbie-loyaltyMenuDescription spotbie-text-gradient text-center mt-2 mb-3">
-        Local ads that work and get your business exposure.
+        Local promotions that work and get your business exposure.
     </p>
 
     <div class='sb-menuAdWrapper'>
@@ -22,7 +22,7 @@
         <div class='spotbie-button text-uppercase mt-5'
                 *ngIf="adList.length < 3"
                 (click)="addAd()">
-            CREATE AD
+            NEW PROMOTION
         </div>
 
     </div>
