--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.css
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.css
@@ -147,6 +147,7 @@ p{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    z-index: 97 !important;
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
@@ -173,7 +174,6 @@ p{
         width: 102%;
         min-width: 102%;
         max-width: 102%;        
-        z-index: 95 !important;
     }
 }
 @media (max-width: 700px) { 
@@ -238,7 +238,7 @@ p{
         min-height: 55px;        
     }  
     .spotbie-overlay-window{
-        padding-bottom: 100px !important;
+        padding-top: 80px !important;
     }                   
 }
 @media (max-width: 420px) { 
