--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -1,165 +1,178 @@
+<section id="earnLoyaltyPoints" #earnLoyaltyPoints>
 
-<div class="sb-top-headerImg"></div>
+    <div class="sb-top-headerImg"></div>
 
-<h1 class="sb-text-light-green-gradient text-uppercase">
-    COMMUNITY LOYALTY POINTS
-</h1>
-
-<div class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
-    <span>GET STARTED</span>
-</div>
-
-<img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
-
-<p class="text-center">    
+    <h1 class="sb-text-light-green-gradient text-uppercase">
+        COMMUNITY LOYALTY POINTS
+    </h1>
     
-    <i class='fa fa-map-marker-alt'></i>
-    <span class="spotbie-text-gradient"> from nearby</span>
+    <div class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
+        <span>GET STARTED</span>
+    </div>
     
-    <br/><br/>
-    <a class="spotbie-text-link text-uppercase" [routerLink]="['/business']">SpotBie Community Members</a> 
+    <img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
     
-    <br/><br/>
-    <span class="spotbie-text-gradient">Food, Shopping, Events</span>
-    <br/><br/>
+    <p class="text-center">    
+        
+        <span class="spotbie-text-gradient">from nearby</span>
+        
+        <br/><br/>
+        <a class="spotbie-text-link text-uppercase" [routerLink]="['/business']">SpotBie Community Members</a> 
+        
+        <br/><br/>
+        <span class="spotbie-text-gradient">Food, Shopping, Events</span>
+        <br/><br/>
 
-    <span class="spotbie-text-gradient">Exclusive discounts, drinks & food, event merchandise, and more.</span>
-    <br/><br/>
+    </p>
+    
+    <p class="spotbie-text-gradient text-center">Exclusive discounts, drinks & food, event merchandise, and more.<br/><br/></p>
 
-</p>
+    <p class="sb-text-light-green-gradient text-center mt-2">
+        AT ALL SPOTBIE LOCATIONS
+        
+    </p>
 
-<app-download-mobile></app-download-mobile>
+    <app-download-mobile></app-download-mobile>
+    
+    <div class="sb-homePageIconsTable mt-5 mb-4">
+    
+        <div (click)="spawnCategories('food')">
+            <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
+            <span class='spotbie-text-gradient'>FOOD</span>
+        </div>
+    
+        <div (click)="spawnCategories('events')">
+            <img src="assets/images/home_imgs/find-events.svg" /><br/>
+            <span class='spotbie-text-gradient'>EVENTS</span>
+        </div>    
+    
+        <div (click)="spawnCategories('shopping')">
+            <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
+            <span class='spotbie-text-gradient'>RETAIL</span>
+        </div>         
+    
+    </div>
+    
+</section>
 
-<div class="sb-homePageIconsTable mt-5 mb-4">
+<section id="earnPlacesToEat" #earnPlacesToEat>
+    <div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg)' }" (click)="spawnCategories('food')"></div>
 
-    <div (click)="spawnCategories('food')">
-        <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
-        <span class='spotbie-text-gradient'>FOOD</span>
+    <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('food')" />            
+
+    <h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('food')" #placesToEatTitle id="#placesToEatTitle">
+        - PLACES TO EAT -
+    </h2>
+
+    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+
+    <div class="text-uppercase text-center">
+
+        <br/>
+        <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
+        <br/>
+        <span><i class="fa fa-hamburger"></i></span>
+        <br/><br/>
+        <h4 class="spotbie-text-gradient">REDEEM REWARDS</h4>
+
     </div>
 
-    <div (click)="spawnCategories('events')">
-        <img src="assets/images/home_imgs/find-events.svg" /><br/>
-        <span class='spotbie-text-gradient'>EVENTS</span>
-    </div>    
+    <p class="spotbie-text-gradient text-center mt-2 mb-2">
+        Easily find places to eat near you with our map.
+    </p>
 
-    <div (click)="spawnCategories('shopping')">
-        <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
-        <span class='spotbie-text-gradient'>RETAIL</span>
-    </div>         
+    <p class="spotbie-text-gradient text-center">
+        <br/>    
+        Exclusive rewards as menu items, points, or discounts.
+        <br/><br/> 
+    </p>   
 
-</div>
+    <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('food')">
+        <span>GET STARTED</span>
+    </button>
 
-<div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg)' }" (click)="spawnCategories('food')"></div>
+</section>
 
-<img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('food')" />            
+<section id="earnShopping" #earnShopping>
+    <div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-miami-shopping.jpg' }" (click)="spawnCategories('shopping')"></div>
 
-<h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('food')" #placesToEatTitle id="#placesToEatTitle">
-    - PLACES TO EAT -
-</h2>
+    <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('shopping')" />
 
-<img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+    <h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('shopping')"  #shoppingTitle>
+        - RETAIL STORES -
+    </h2>
 
-<div class="text-uppercase text-center">
+    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
 
-    <br/>
-    <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
-    <br/>
-    <span><i class="fa fa-hamburger"></i></span>
-    <br/><br/>
-    <h4 class="spotbie-text-gradient">REDEEM REWARDS</h4>
+    <div class="text-uppercase text-center">
 
-</div>
+        <br/>
+        <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
+        <br/>
+        <span><i class='fa fa-money-bill'></i></span>
+        <br/><br/>
+        <h4 class="spotbie-text-gradient">EVERYTIME YOU SHOP</h4>
+        
+    </div>
 
-<p class="spotbie-text-gradient text-center mt-2 mb-2">
-    Looking for something to eat?
-</p>
+    <p class="spotbie-text-gradient text-center mt-2 mb-2">
+        Earn and spend loyalty points at your favorite retail stores.
+    </p>
 
-<p class="spotbie-text-gradient text-center">
-    <br/>    
-    Exclusive rewards as menu items, points, or discounts.
-    <br/><br/> 
-</p>   
+    <p class="spotbie-text-gradient text-center">
+        <br/>    
+        Redeem rewards and discounts.
+        <br/><br/> 
+    </p>   
 
-<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('food')">
-    <span>GET STARTED</span>
-</button>
+    <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('shopping')">
+        <span>GET STARTED</span>
+    </button>  
+</section>
 
-<div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-miami-shopping.jpg' }" (click)="spawnCategories('shopping')"></div>
+<section id="earnEvents" #earnEvents>
+    <div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-miami-events.jpg)' }" (click)="spawnCategories('events')"></div>
 
-<img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('shopping')" />
-
-<h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('shopping')"  #shoppingTitle>
-    - RETAIL STORES -
-</h2>
-
-<img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
-
-<div class="text-uppercase text-center">
-
-    <br/>
-    <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
-    <br/>
-    <span><i class='fa fa-money-bill'></i></span>
-    <br/><br/>
-    <h4 class="spotbie-text-gradient">EVERYTIME YOU SHOP</h4>
+    <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('events')" />
     
-</div>
-
-<p class="spotbie-text-gradient text-center mt-2 mb-2">
-    Earn and spend loyalty points at your favorite retail stores.
-</p>
-
-<p class="spotbie-text-gradient text-center">
-    <br/>    
-    Redeem rewards and discounts.
-    <br/><br/> 
-</p>   
-
-<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('shopping')">
-    <span>GET STARTED</span>
-</button>  
-
-<div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-miami-events.jpg)' }" (click)="spawnCategories('events')"></div>
-
-<img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' (click)="spawnCategories('events')" />
-
-<h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('events')"  #eventsTitle>
-    - EVENTS NEAR YOU -
-</h2>
-
-<img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
-
-<div class="text-uppercase text-center">
+    <h2 class="spotbie-text-gradient text-uppercase" (click)="spawnCategories('events')"  #eventsTitle>
+        - EVENTS NEAR YOU -
+    </h2>
     
-    <br/>
-    <h3 class="spotbie-text-gradient sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
-    <br/>
-    <span><i class='fa fa-glass-cheers'></i></span>
-    <br/><br/>
-    <h4 class="spotbie-text-gradient">AT EVENTS</h4>
+    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
     
-</div>
-
-<p class="spotbie-text-gradient text-center mt-4 mb-2">
-    Spend Loyalty Points at Events
-</p>
-
-<p class="spotbie-text-gradient text-center">
-    <br/>    
-    Redeem on-site event merchandise, products, and more.
-    <br/><br/> 
-</p>     
-
-<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('events')">
-    <span>GET STARTED</span>
-</button>
+    <div class="text-uppercase text-center">
+        
+        <br/>
+        <h3 class="spotbie-text-gradient sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
+        <br/>
+        <span><i class='fa fa-glass-cheers'></i></span>
+        <br/><br/>
+        <h4 class="spotbie-text-gradient">AT EVENTS</h4>
+        
+    </div>
+    
+    <p class="spotbie-text-gradient text-center mt-4 mb-2">
+        Spend Loyalty Points at Events
+    </p>
+    
+    <p class="spotbie-text-gradient text-center">
+        <br/>    
+        Redeem on-site event merchandise, products, and more.
+        <br/><br/> 
+    </p>     
+    
+    <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('events')">
+        <span>GET STARTED</span>
+    </button>    
+</section>
 
 <div class="mb-4 sb-readImage cursor-pointer" [ngStyle]="{ 'background' : 'url(assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg)' }"></div>
 
 <div class="sb-footer pt-5 pb-5">
 
     <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
-    <img class="mt-3 mb-3" src="assets/images/home_imgs/logo_spotbie-02.svg" />
+    <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
     <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2021</p>
 
 </div>
