grow your busienss

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -2,7 +2,7 @@
     
     <div class="sb-top-headerImg"></div>
 
-    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem;">GROW YOUR BUSINESS</h1>
+    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
     
     <img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
     
